--- a/public/css/search.css
+++ b/public/css/search.css
@@ -9,12 +9,6 @@
 #search-bar .wrapper {
   margin: 10px auto 0;
   width: 90%;
-  /* display: flex;
-    justify-content: center; */
-  /* position: absolute;
-    top: 2%;
-    left: 50%;
-    transform: translate(-50%, -2%); */
 }
 #search-bar .search-box {
   width: 330px;
@@ -46,13 +40,14 @@
   position: absolute;
   width: 60px;
   height: 60px;
-  background: var(--white-bg);
+  background: var(--bg);
+  border: 5px solid var(--white-bg);
   border-radius: 50%;
-  right: 0px;
+  right: -2px;
   top: 10px;
   cursor: pointer;
   text-align: center;
-  line-height: 60px;
+  line-height: 55px;
   font-size: 16px;
   color: var(--grey);
   transition: all 0.8s ease;
