--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,8 +32,7 @@
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.min.js"></script> -->
 <script src="js/theme.js"></script>
 <% if (page=="index") { %>
-
-  <script src="js/api.js"></script>
+  <script src="js/api2.js"></script>
 <% } %>
 <% if (page=="search") { %>
   <script src="js/search.js"></script>
