--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <script>
-  let page = '<%=page%>'
+  let page = '<%=page%>';
 </script>
 
 <% if (page=="index") { %>
@@ -22,7 +22,7 @@
     setInterval(typeWriter, 1500);
   </script>
 <% } %>
-<script src="js/nav.js"></script>
+<script src="/js/nav.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -30,16 +30,8 @@
 ></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.min.js"></script> -->
-<script src="js/theme.js"></script>
-<% if (page=="index") { %>
-  <script src="js/api2.js"></script>
-<% } %>
-<% if (page=="search") { %>
-  <script src="js/search.js"></script>
-<% } %>
-<% if (page=="result") { %>
-  <script src="js/result.js"></script>
-<% } %>
+<script src="/js/theme.js"></script>
 
+<script src="/js/<%= typeof page !== 'undefined' ? page : '' %>.js"></script>
 </body>
 </html>
