--- a/public/css/search.css
+++ b/public/css/search.css
@@ -5,6 +5,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 250px;
+  text-align: center;
 }
 #search-bar .wrapper {
   margin: 10px auto 0;
