--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <%- include("partials/header") %> 
     <div id="preload-1"></div>
     <div id="preload-2"></div>
-    <!-- <div id="container" id="preloader">
+    <div id="container" id="preloader">
       <div class="cube" id="cube1"></div>
       <div class="cube" id="cube2"></div>
       <div class="cube" id="cube3"></div>
       <div class="cube" id="cube4"></div>
       <p id="load">Loading<span id="dots"></span></p>
-    </div> -->
+    </div>
 
     <div id="popup">
       <div id="popup-wrapper" class="popup-container">
