--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,9 +10,11 @@
     <div class="heading">
         <h2>API Used</h2>
         <p>WeatherAPI - <a href="https://weatherapi.com">https://weatherapi.com</a></p>
+        <p>Contribute Now - <a href="https://weatherapi.com">http://bit.ly/weatherex</a></p>
     </div>
+
     <div class="contact">
-        <span>Created By <a href="https://www.github.com/mmuazam98">MuaZam</a> || <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created with &#10084 by <a href="https://www.github.com/mmuazam98">MuaZam</a>
         <ul class="social-icons">
             <li><a class="github" href="https://github.com/mmuazam98"><i class="fab fa-github"></i></a></li>
             <li><a class="codepen" href="https://codepen.io/mmuazam99"><i class="fab fa-codepen"></i></a></li>   
