--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %> 
+<%- include("partials/header") %>
     <div id="preload-1"></div>
     <div id="preload-2"></div>
     <div id="container" id="preloader">
@@ -22,7 +22,7 @@
       <!-- heading  -->
       <div class="name">
         <span id="name"></span><span id="country"></span>
-        <i class="far fa-angle-down arrow" id="show-time" aria-hidden="true"></i>
+        <i class="fa fa-angle-down arrow" id="show-time" aria-hidden="true"></i>
         <p id="time" class="hide">2021-03-30 14:09</p>
       </div>
       <!-- main container  -->
@@ -46,15 +46,15 @@
       <!-- wind humidity pressure  -->
       <div class="container-sub">
         <div class="wind">
-          <p class="sub-heading">Wind <i class="fal fa-wind"></i></p>
+          <p class="sub-heading">Wind <i class="fa fa-wind"></i></p>
           <p id="wind"></p>
         </div>
         <div class="humidity">
-          <p class="sub-heading">Humidity <i class="fal fa-tint"></i></p>
+          <p class="sub-heading">Humidity <i class="fa fa-tint"></i></p>
           <p id="humidity"></p>
         </div>
         <div class="pressure">
-          <p class="sub-heading">Pressure <i class="fal fa-tachometer-alt"></i></p>
+          <p class="sub-heading">Pressure <i class="fa fa-tachometer-alt"></i></p>
           <p id="pressure"></p>
         </div>
       </div>
@@ -83,7 +83,5 @@
 
     <!-- navbar  -->
     <%- include("partials/nav") %>
-   
-<%- include("partials/footer") %> 
 
-   
+<%- include("partials/footer") %>
