--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,26 +3,26 @@
     <ul>
       <li class="list active" data-color="#e6e6e6" data-id="index">
         <a href="/">
-          <span class="icon"><i class="far fa-home"></i></span>
+          <span class="icon"><i class="fa fa-home"></i></span>
           <span class="title">Home</span>
         </a>
       </li>
 
       <li class="list" data-color="#05c46b" data-id="search">
         <a href="/search">
-          <span class="icon"><i class="far fa-search"></i></span>
+          <span class="icon"><i class="fa fa-search"></i></span>
           <span class="title">Search</span>
         </a>
       </li>
       <li class="list" data-color="#3c40c6" data-id="about">
         <a href="/about">
-          <span class="icon"><i class="far fa-info"></i></span>
+          <span class="icon"><i class="fa fa-info"></i></span>
           <span class="title">About</span>
         </a>
       </li>
       <li class="list" data-color="#ffa801" data-id="settings">
         <a href="/settings">
-          <span class="icon"><i class="far fa-cog"></i></span>
+          <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="title">Settings</span>
         </a>
       </li>
