--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,23 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weatherex</title>
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.7.0/qs.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/search.css" />
     <% if (page=="result") { %>
-    <link rel="stylesheet" href="css/result.css" />
+      <link rel="stylesheet" href="css/result.css" />
     <% } %>
     <% if (page=="settings") { %>
       <link rel="stylesheet" href="css/settings.css" />
-      <% } %>
-      <% if (page=="about") { %>
-        <link rel="stylesheet" href="css/about.css" />
-        <% } %>
+    <% } %>
+    <% if (page=="about") { %>
+      <link rel="stylesheet" href="css/about.css" />
+    <% } %>
   </head>
   <body>
